# pettystring-cpp

./: README.md
include/pettystring/: base64.h  json.h  petty_string.h
msvc/: PettyStringTest.sln  PettyStringTest.vcxproj  PettyStringTest.vcxproj.filters
src/: json.cpp
test/: CMakeLists.txt
test/src/: base64_test.cpp  json_test.cpp  petty_string_test.cpp
